// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Schema Builder Supports @deprecated 1`] = `
Array [
  Object {
    "deprecation": undefined,
    "name": "VALUE",
  },
  Object {
    "deprecation": "",
    "name": "OLD_VALUE",
  },
  Object {
    "deprecation": "Terrible reasons",
    "name": "OTHER_VALUE",
  },
]
`;

exports[`Schema Builder Supports @deprecated 2`] = `
Array [
  Object {
    "deprecation": "",
    "name": "field1",
  },
  Object {
    "deprecation": "Because I said so",
    "name": "field2",
  },
  Object {
    "deprecation": undefined,
    "name": "enum",
  },
  Object {
    "deprecation": undefined,
    "name": "field5",
  },
]
`;
